src/objects/Promotions__c.object
<CustomObject>
    <description>Captures promotional campaigns related to ticket exchange for Artists</description>
    <fields>
        <fullName>AdPlan__c</fullName>
        <inlineHelpText>Ad Plan that the Promotion belongs to.</inlineHelpText>
        <label>Ad Plan</label>
        <referenceTo>AdPlan__c</referenceTo>
        <relationshipLabel>Promotions</relationshipLabel>
        <relationshipName>Promotions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Format__c</fullName>
        <formula>TEXT(Vendor__r.Format__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Format</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Albany</fullName>
                </value>
                <value>
                    <fullName>Albuquerque</fullName>
                </value>
                <value>
                    <fullName>Amarillo</fullName>
                </value>
                <value>
                    <fullName>Ames</fullName>
                </value>
                <value>
                    <fullName>Anchcorage, AK</fullName>
                </value>
                <value>
                    <fullName>Appleton</fullName>
                </value>
                <value>
                    <fullName>Aspen</fullName>
                </value>
                <value>
                    <fullName>Atlanta</fullName>
                </value>
                <value>
                    <fullName>Augusta</fullName>
                </value>
                <value>
                    <fullName>Austin</fullName>
                </value>
                <value>
                    <fullName>Baltimore</fullName>
                </value>
                <value>
                    <fullName>Banff</fullName>
                </value>
                <value>
                    <fullName>Baton Rouge</fullName>
                </value>
                <value>
                    <fullName>Bay Area</fullName>
                </value>
                <value>
                    <fullName>Beaumont</fullName>
                </value>
                <value>
                    <fullName>Billings</fullName>
                </value>
                <value>
                    <fullName>Biloxi</fullName>
                </value>
                <value>
                    <fullName>Birmingham</fullName>
                </value>
                <value>
                    <fullName>Boise</fullName>
                </value>
                <value>
                    <fullName>Bonnyville</fullName>
                </value>
                <value>
                    <fullName>Boston</fullName>
                </value>
                <value>
                    <fullName>Bozeman</fullName>
                </value>
                <value>
                    <fullName>Brandon</fullName>
                </value>
                <value>
                    <fullName>Branson</fullName>
                </value>
                <value>
                    <fullName>Buffalo</fullName>
                </value>
                <value>
                    <fullName>Burlington, VT</fullName>
                </value>
                <value>
                    <fullName>Burnaby</fullName>
                </value>
                <value>
                    <fullName>Calgary</fullName>
                </value>
                <value>
                    <fullName>Charleston, SC</fullName>
                </value>
                <value>
                    <fullName>Charleston, WV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NumOfTickets__c</fullName>
        <inlineHelpText>Number of Promotional Tickets.</inlineHelpText>
        <label># of Tickets</label>
        <summarizedField>PromoPromoScale__c.NumberofTickets__c</summarizedField>
        <summaryForeignKey>PromoPromoScale__c.Promotions__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NumberofLive__c</fullName>
        <inlineHelpText># of live mentions that are played in exchange for airtime</inlineHelpText>
        <label># of Live</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberofRecorded__c</fullName>
        <inlineHelpText># of pre-recorded mentions that are played in exchange for airtime</inlineHelpText>
        <label># of Recorded</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PromoValue__c</fullName>
        <label>Promo Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TotalTicketValue__c</fullName>
        <description>Sum of the Promo-PromoScale total values</description>
        <inlineHelpText>Total value of all tickets for this vendor.</inlineHelpText>
        <label>Total Ticket Value</label>
        <summarizedField>PromoPromoScale__c.TicketValue__c</summarizedField>
        <summaryForeignKey>PromoPromoScale__c.Promotions__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Vendor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Promotions</relationshipLabel>
        <relationshipName>Promotions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fxPromoValue__c</fullName>
        <formula>(PromoValue__c / (AdPlan__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Promo Value (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxTotalTicketValue__c</fullName>
        <formula>(TotalTicketValue__c / (AdPlan__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Total Ticket Value (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Promotions</label>
    <nameField>
        <displayFormat>Promo-{000000}</displayFormat>
        <label>Promotions ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Promotions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>